- validace ceny a hmotnosti - po smazani sablony vybrat "no template" - poznamky v detailu shipmentu - rozbaleni prvni sekce po otevreni auction/new

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -238,7 +238,9 @@
 		"auction_history": "Načítání historie se nezdařilo",
 		"wrong_bid": "Neplatná částka přihození",
 		"weight_is_number": "Hmotnost musí být číslo",
+		"weight_is_low": "Hmotnost musí být alespoň 1kg",
 		"price_is_number": "Cena musí být číslo",
+		"price_is_low": "Minimální cena je 50 Kč",
 		"bid_is_number": "Příhoz musí být číslo",
 		"psc_is_number": "PSČ musí být číslo",
 		"ico_is_number": "IČO musí být číslo",
@@ -253,7 +255,7 @@
 			"3": "Možné hodnoty pro smazání uživatele jsou 0 nebo 1",
 			"4": "Tato aukce nebyla nalezena",
 			"5": "Aktuálně vyhráváte tuto aukci",
-			"6": "Minimální přihoz je 1 kč",
+			"6": "Minimální přihoz je 1 Kč",
 			"7": "Nesprávné heslo",
 			"8": "Uživatel nebyl nalezen",
 			"11": "Tato jízda není pod vaší firmou",
