--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -238,7 +238,9 @@
 		"auction_history": "Load history failed",
 		"wrong_bid": "Wrong bid",
 		"weight_is_number": "Weight must be a number",
+		"weight_is_low": "Weight must be at least 1kg",
 		"price_is_number": "Price must be a number",
+		"price_is_low": "Price must be at least 50 Czk",
 		"bid_is_number": "Bid must be a number",
 		"psc_is_number": "ZIP must be a number",
 		"ico_is_number": "Identification number must be a number",
@@ -253,7 +255,7 @@
 			"3": "Allowed values for delete user are 0 or 1",
 			"4": "This auction not found in database",
 			"5": "Currently you are winning this auction",
-			"6": "Minimum bidding of every auction is 1 kc",
+			"6": "Minimum bidding of every auction is 1 Czk",
 			"7": "Passwords is not correct",
 			"8": "User not found",
 			"11": "This shipment is not for your company",
