- editace acc info

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -56,6 +56,7 @@
 		"actual_password": "Aktuální heslo",
 		"new_password": "Nové heslo",
 		"retype_password": "Znovu zadejte heslo",
+		"set_account_info": "Upravit údaje",
 		"change": "Změnit",
 		"change_password": "Změnit heslo",
 		"manage": "Správce",
@@ -304,6 +305,7 @@
 		"shipment_added": "Transporterovi byla přiřažena vyhraná aukce",
 		"resend_password": "Heslo bylo posláno na váš email",
 		"change_password": "Heslo bylo změněno",
+		"set_account_info": "Údaje byly změněny",
 		"auction_created": "Aukce byla úspěšně založena",
 		"auction_template_created": "Šablona pro aukci byla vytvořen",
 		"auction_template_selected": "Šablona vybrána",
