--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -56,6 +56,7 @@
 		"actual_password": "Actual password",
 		"new_password": "New password",
 		"retype_password": "Retype password",
+		"set_account_info": "Set account info",
 		"change": "Change",
 		"change_password": "Change password",
 		"manage": "Manage",
@@ -304,6 +305,7 @@
         "verify_user": "Verify state was changed",
 		"shipment_added": "New shipment added and assign to transporter",
 		"resend_password": "Password was send to your email",
+		"set_account_info": "Account info was changed",
 		"change_password": "Password was changed",
 		"auction_created": "Auction was successfully created",
 		"auction_template_created": "Template for auction was successfully created",
