- presunuti prepinace aukci po zmenseni

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -342,7 +342,7 @@
 		"auction_template_unselected": "Šablona odnastavena",
 		"auction_template_delete": "Šablona byla smazána",
 		"driver_deleted": "Řidič byl smazán",
-		"notification_set": "Notifikace nastaveny",
+		"notification_set": "Nastavení notifikací uloženo",
 		"bid_auction": "Přihození úspěšné"
 	}
 }
