--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -56,13 +56,13 @@
 		"fail_activate_account": "Tento aktivační kód již byl použit nebo neexistuje.",
 		"redirect_to_login": "Přejít na přihlášení",
 		"send_password": "Poslat heslo",
-		"your_acc": "Váš účet",
+		"your_acc": "Osobní údaje",
 		"actual_password": "Aktuální heslo",
 		"new_password": "Nové heslo",
 		"retype_password": "Znovu zadejte heslo",
 		"set_account_info": "Upravit údaje",
 		"change": "Změnit",
-		"change_password": "Změnit heslo",
+		"change_password": "Změna hesla",
 		"manage": "Správce",
 		"freight": "Náklad",
 		"my_shipment": "Moje zásilky",
@@ -145,8 +145,8 @@
 			"no_photos": "Žádné fotky"
 		},
 		"tab": {
-			"account": "Účet",
-			"profile": "Profil",
+			"account": "Můj Profil",
+			"profile": "Osobní údaje",
 			"change_password": "Změna hesla",
 			"notification": "Notifikace",
 			"auction": "Aukce",
