- auction quantity, tuningy

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -63,11 +63,12 @@
 		"set_account_info": "Upravit údaje",
 		"change": "Změnit",
 		"change_password": "Změna hesla",
+		"change_password2": "Upravit heslo",
 		"manage": "Správce",
 		"freight": "Náklad",
 		"my_shipment": "Moje zásilky",
 		"shipment_manage": "Správce zásilek",
-		"about_freight": "O zásilce",
+		"about_freight": "O položce",
 		"more": "Více",
 		"add_driver": "Přidat řidiče",
 		"company": "Moje firma",
@@ -145,7 +146,7 @@
 			"no_photos": "Žádné fotky"
 		},
 		"tab": {
-			"account": "Můj Profil",
+			"account": "Profil",
 			"profile": "Osobní údaje",
 			"change_password": "Změna hesla",
 			"notification": "Notifikace",
@@ -182,16 +183,19 @@
 			"from": "Odkud",
 			"to": "Kam",
 			"price": "Cena v Kč",
+			"priceItem": "Cena za položku",
+			"priceTotal": "Počáteční cena aukce",
+			"quantity": "Počet položek",
 			"currency": "Měna",
 			"id": "ID",
 			"load": "Naložení",
 			"load_note": "Poznámka pro naložení nákladu",
 			"unload": "Vyložení",
 			"unload_note": "Poznámka pro vyložení nákladu",
-			"freight_description": "Popis zásilky",
+			"freight_description": "Popis položky",
 			"owner_company_name": "Firma",
 			"freight_type": {
-				"label": "Typ zásilky",
+				"label": "Typ položky",
 				"1": "Balík do 50 kg",
 				"2": "Balík nad 50 kg",
 				"3": "Atypický balík",
@@ -202,7 +206,7 @@
 				"8": "Jiné"
 			},
 			"freight_size": "Velikost (slovy)",
-			"freight_weight": "Váha zásilky (kg)",
+			"freight_weight": "Váha položky (kg)",
 			"email_addressee": "Email adresáta",
 			"end_auction": "Ukončení aukce",
 			"delivery": "Dodání zásilky",
