--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -63,11 +63,12 @@
 		"set_account_info": "Set account info",
 		"change": "Change",
 		"change_password": "Change password",
+		"change_password2": "Change password",
 		"manage": "Manage",
 		"freight": "Freight",
 		"my_shipment": "My shipment",
 		"shipment_manage": "Shipment manage",
-		"about_freight": "About freight",
+		"about_freight": "About item",
 		"more": "More",
 		"add_driver": "Add driver",
 		"company": "My company",
@@ -145,7 +146,7 @@
 			"no_photos": "No photos"
 		},
 		"tab": {
-			"account": "My profile",
+			"account": "Profile",
 			"profile": "Personal Data",
 			"change_password": "Change password",
 			"notification": "Notification",
@@ -182,16 +183,19 @@
 			"from": "From",
 			"to": "To",
 			"price": "Price in CZK",
+			"priceItem": "Price for item",
+			"priceTotal": "Total auction price",
+			"quantity": "Quantity",
 			"currency": "Currency",
 			"id": "ID",
 			"load": "Load",
 			"load_note": "Note for freight load",
 			"unload": "Unload",
 			"unload_note": "Note for freight unload",
-			"freight_description": "Freight description",
+			"freight_description": "Item description",
 			"owner_company_name": "Company",
             "freight_type": {
-              "label": "Freight type",
+              "label": "Item type",
               "1": "Package up to 50 kg",
               "2": "Package over 50 kg",
               "3": "Atypical package",
@@ -201,8 +205,8 @@
               "7": "Bulk material",
               "8": "Other"
             },
-			"freight_size": "Freight size (words)",
-			"freight_weight": "Freight weight (kg)",
+			"freight_size": "Item size (words)",
+			"freight_weight": "Item weight (kg)",
 			"email_addressee": "Email addressee",
 			"end_auction": "End auction",
 			"delivery": "Delivery",
