--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -101,6 +101,15 @@
         "actual_price": "Actual price",
 		"create_template": "Create template for auction",
 		"create_template_button": "Create Template",
+		"create_auction_dialog_title": "Create auction",
+		"create_auction_dialog_ok": "Create",
+		"create_auction_dialog_main_text": "Check your set information about your auction.",
+		"create_auction_dialog_from": "From",
+		"create_auction_dialog_to": "To",
+		"create_auction_dialog_end_auction": "End of auction",
+		"create_auction_dialog_quantity": "Amount",
+		"create_auction_dialog_item_price": "Item price",
+		"create_auction_dialog_item_total_price": "Total price",
 		"user": {
 			"detail": "User detail",
 			"vacation": "Vacation",
