--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -103,11 +103,11 @@
 		"create_template_button": "Vytvořit Šablonu",
 		"create_auction_dialog_title": "Vytvoření aukce",
 		"create_auction_dialog_ok": "Vytvořit",
-		"create_auction_dialog_main_text": "Prosím zkontrolujte si vyplněné údaje o vaši aukci.",
+		"create_auction_dialog_main_text": "Prosím zkontrolujte si vyplněné údaje o Vaši aukci.",
 		"create_auction_dialog_from": "Odkud",
 		"create_auction_dialog_to": "Kam",
 		"create_auction_dialog_end_auction": "Ukončení aukce",
-		"create_auction_dialog_quantity": "Množství",
+		"create_auction_dialog_quantity": "Počet položek",
 		"create_auction_dialog_item_price": "Cena za položku",
 		"create_auction_dialog_item_total_price": "Celková počáteční cena aukce",
 		"user": {
