- profil page redesign, new auction datepickers on phone

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -36,7 +36,8 @@
 		"confirmPassword": "Potvrzení hesla",
 		"company_name" : "Název firmy",
         "credit": "Kredit",
-        "share": "podíl",
+        "share": "Podíl",
+        "credit_all": "Celkový zisk",
 		"ico" : "IČO",
 		"bank_account" : "Bankovní účet",
 		"address" : "Adresa",
@@ -57,6 +58,8 @@
 		"redirect_to_login": "Přejít na přihlášení",
 		"send_password": "Poslat heslo",
 		"your_acc": "Osobní údaje",
+		"your_acc_info": "Informace",
+		"contact_acc": "Kontaktní údaje",
 		"actual_password": "Aktuální heslo",
 		"new_password": "Nové heslo",
 		"retype_password": "Znovu zadejte heslo",
