--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -36,7 +36,8 @@
 		"confirmPassword": "Confirm password",
 		"company_name" : "Company name",
         "credit": "Credit",
-        "share": "share",
+        "share": "Share",
+        "credit_all": "Total profit",
 		"ico" : "Identification number",
 		"bank_account" : "Bank account",
 		"address" : "Address",
@@ -57,6 +58,8 @@
 		"redirect_to_login": "Navigate to login",
 		"send_password": "Send password",
 		"your_acc": "Personal Data",
+		"your_acc_info": "Personal Information",
+		"contact_acc": "Contact",
 		"actual_password": "Actual password",
 		"new_password": "New password",
 		"retype_password": "Retype password",
