- economy, notification responsive, new auction integers

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -36,8 +36,9 @@
 		"confirmPassword": "Potvrzení hesla",
 		"company_name" : "Název firmy",
         "credit": "Kredit",
-        "share": "Podíl",
-        "credit_all": "Celkový zisk",
+        "share": "Podíl Nohe",
+        "credit_all": "Úspornost (počáteční - konečné ceny)",
+        "credit_reset": "Nefakturováno",
 		"ico" : "IČO",
 		"bank_account" : "Bankovní účet",
 		"address" : "Adresa",
