--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -36,8 +36,9 @@
 		"confirmPassword": "Confirm password",
 		"company_name" : "Company name",
         "credit": "Credit",
-        "share": "Share",
-        "credit_all": "Total profit",
+        "share": "Nohe Share",
+        "credit_all": "Economy (start - end prices)",
+        "credit_reset": "Unbilled amount",
 		"ico" : "Identification number",
 		"bank_account" : "Bank account",
 		"address" : "Address",
