- nástřel grafu pro kredity

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -37,8 +37,11 @@
 		"company_name" : "Název firmy",
         "credit": "Kredit",
         "share": "Podíl Nohe",
-        "credit_all": "Úspornost (počáteční - konečné ceny)",
+        "credit_all": "Úspornost",
         "credit_reset": "Nefakturováno",
+        "charts_label": "Součet cen aukcí",
+        "charts_start": "vytvoření",
+        "charts_end": "ukončení",
 		"ico" : "IČO",
 		"bank_account" : "Bankovní účet",
 		"address" : "Adresa",
