- doplnění překladů pro charts, oprava footeru

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -40,8 +40,8 @@
         "credit_all": "Úspornost",
         "credit_reset": "Nefakturováno",
         "charts_label": "Součet cen aukcí",
-        "charts_start": "vytvoření",
-        "charts_end": "ukončení",
+        "charts_start": "vytvořené",
+        "charts_end": "ukončené",
 		"ico" : "IČO",
 		"bank_account" : "Bankovní účet",
 		"address" : "Adresa",
