--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -39,6 +39,9 @@
         "share": "Nohe Share",
         "credit_all": "Economy",
         "credit_reset": "Unbilled amount",
+        "charts_label": "Auctions summary",
+        "charts_start": "Created",
+        "charts_end": "Done",
 		"ico" : "Identification number",
 		"bank_account" : "Bank account",
 		"address" : "Address",
